# radio

./: CLAUDE.md  config.yaml  main.py  requirements.txt
audio/: airplay.py  player.py
clock/: alarm_actions.py  scheduler.py  time_display.py
hardware/: amp.py  buttons.py  led_strip.py  mock.py  potentiometer.py
podcast-brain/: .gitignore  README.md  config.toml  pyproject.toml
podcast-brain/pkm/: api.py  budget.py  cli.py  config.py  pipeline.py  queue.py
podcast-brain/pkm/bot/: discord_bot.py
podcast-brain/pkm/extract/: base.py  canonicalize.py  chunker.py  local.py
podcast-brain/pkm/extract/prompts/: __init__.py
podcast-brain/pkm/extract/prompts/styles/: banter.md  informational.md  narrative.md
podcast-brain/pkm/extract/schemas/: __init__.py  banter.py  informational.py  narrative.py
podcast-brain/pkm/ingest/: inbox.py  itunes.py  opml.py  pacer.py  podcastindex.py  rss.py  subscribe.py  url.py
podcast-brain/pkm/store/: graph.py  vault.py
podcast-brain/pkm/summarize/: base.py  episode.py  synthesize.py
podcast-brain/pkm/summarize/prompts/: __init__.py  weekly_digest.md
podcast-brain/pkm/summarize/prompts/styles/: banter.md  informational.md  narrative.md
podcast-brain/pkm/transcribe/: __init__.py  base.py  faster_whisper.py  mlx_whisper.py
podcast-brain/tests/: test_api.py  test_budget.py  test_canonicalize.py  test_extract.py  test_ingest.py  test_ingest_extras.py  test_pipeline.py  test_queue.py  test_store.py  test_summarize.py  test_synthesize.py  test_transcribe.py
provision/: ap_mode.py  wifi_setup.html
splitflap/: display.py  (+2 more)
(+5 files in other folders)
