[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "podcast-brain"
version = "0.0.1"
description = "Personal podcast knowledge system: transcribe → extract → Obsidian vault + Kuzu graph"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "feedparser>=6.0",
    "apscheduler>=3.10",
    "watchdog>=4.0",
    "httpx>=0.27",
    "anthropic>=0.30",
    "kuzu>=0.5",
    "python-slugify>=8.0",
    "tzlocal>=5.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
mac  = ["mlx-whisper>=0.3", "torch>=2.2"]
cuda = ["faster-whisper>=1.0", "torch>=2.2"]
cpu  = ["faster-whisper>=1.0", "torch>=2.2"]
url  = ["yt-dlp>=2024.10.0"]
dev  = ["pytest>=8", "respx>=0.21"]

[project.scripts]
podcast-brain = "pkm.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["pkm"]
